--- a/src/components/Navigation/navigation.scss
+++ b/src/components/Navigation/navigation.scss
@@ -10,7 +10,7 @@ nav {
     display: flex;
     flex-direction: column;
     gap: 1em;
-    margin-right: 1em;
+    // margin-right: 1em;
     background-color: #EBEBEB;
     
     .menu {
@@ -51,12 +51,13 @@ nav {
     .icon-menu {
         background-color: #444444;
         width: 100%;
-        height: 3.6em;
+        height: 6.32em;
         display: grid;
         place-content: center;
         
         ion-icon {
             color: #ffffff;
+            font-size: 46px;
         }
     }
 }
