--- a/src/components/Navigation/navigation.scss
+++ b/src/components/Navigation/navigation.scss
@@ -5,8 +5,8 @@
 }
 
 nav {
-    height: 100vh;
-    float: left;
+    // height: 100vh;
+    // float: left;
     display: flex;
     flex-direction: column;
     gap: 1em;
