--- a/src/components/LoginForm/loginForm.scss
+++ b/src/components/LoginForm/loginForm.scss
@@ -1,4 +1,4 @@
-.login-form {
+.login-form, .registration-form {
     max-width: 650px;
     margin: 1em auto;
     padding: 20px;
@@ -8,7 +8,7 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.login-heading {
+.login-heading, .registration-heading {
     text-align: center;
     margin-bottom: 20px;
 }
@@ -49,7 +49,7 @@
     margin-top: 20px;
 }
 
-.login-button, .cancel-button {
+.login-button, .register-button , .cancel-button {
     border: none;
     padding: 10px 32px;
     border-radius: 4px;
@@ -57,7 +57,7 @@
     font-weight: bold;
 }
 
-.login-button {
+.login-button, .register-button {
     background-color: #444;
     color: #fff;
     transition: background-color 0.2s ease;
