--- a/src/components/PromptForm/promptForm.scss
+++ b/src/components/PromptForm/promptForm.scss
@@ -23,7 +23,8 @@
             margin-bottom: 1em;
             gap: .5em;
 
-            #temperature {
+            #temperature,
+            #quantity {
                 width: 16%;
             }
 
@@ -33,6 +34,20 @@
                 border-radius: 6px;
                 border: 2px solid #ccc;
                 padding: .5em;
+                margin: 1em 0;
+                gap: 1em;
+
+                div {
+                    background-color: #fff;
+                    border: 1px solid #ccc;
+                    border-radius: 10px;
+                    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+                    padding: 10px;
+                    font-family: Arial, sans-serif;
+                    position: relative;
+                    overflow: hidden;
+                    display: inline-block;
+                }
             }
         }
 
